# rmcp_ros2_humble_pkg

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
actions_pkg/: README.md  package.xml  setup.cfg  setup.py  steps.txt
actions_pkg/actions_pkg/: client.py  server.py
custom_msgs/: CMakeLists.txt  README.md  package.xml  steps.txt
custom_msgs/action/: Fibonacci.action
custom_msgs/srv/: CheckEvenOdd.srv
franka/: README.md
franka/custom_fr3_moveit_config/: CMakeLists.txt  package.xml
franka/franka_description/: CHANGELOG.rst  package.xml
franka/franka_robotiq/: CMakeLists.txt  package.xml
franka/moveit_tests_pkg/: CMakeLists.txt  package.xml
franka/moveit_tests_pkg/src/: move_cartesian_program.cpp  move_named_target_example.cpp  move_target_program.cpp
franka/python_scripts_pkg/: package.xml  setup.cfg  setup.py
my_robot_description/: CMakeLists.txt  README.md  package.xml  steps.txt
my_robot_description/config/: controllers.yaml
my_robot_description/launch/: robot_gazebo.launch.py  robot_gazebo_nocontrol.launch.py  robot_visualization.launch.py
my_robot_description/rviz/: visualize_robot.rviz
my_robot_description/urdf/: robot.urdf.xacro  robot_arm.urdf  robot_arm.urdf.xacro  robot_arm_control.urdf  robot_control.urdf.xacro
my_robot_moveit_config/: .setup_assistant  README.md  package.xml
my_robot_moveit_config/config/: FASTbot.ros2_control.xacro  FASTbot.srdf  FASTbot.urdf.xacro  chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
my_robot_moveit_config/launch/: demo.launch.py  demo_with_controllers.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
services_pkg/: README.md  package.xml  setup.py  steps.txt
tf2_demo/: README.md  package.xml  setup.py  steps.txt
topics_pkg/: README.md  package.xml  setup.cfg  setup.py  steps.txt
(+64 files in other folders)
